// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`task-details > renders 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




        <form
  class="task-outcome-form"
  method="post"
  id="completeTaskForm"
  action=""
>
    <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>


  <button
    type="submit"
    data-prevent-double-click="true"
    data-testid="save-and-continue-button"
    class="govuk-button task-outcome-form__button"
    data-module="govuk-button"
    data-govuk-button-init=""
  >
    Confirm
  </button>
  <a
    href="/cases/case-id"
    class="govuk-link govuk-!-font-size-16"
    data-testid="back-link"
  >
    Cancel and return
  </a>
</form>

  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders completed task as read-only when case is not interactive 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <div class="form-group">
          <h2 class="govuk-heading-m">Outcome review note</h2>
          <p>Initial review completed</p>
        </div>
  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders completed task with editable form when case is interactive 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <form
  class="task-outcome-form"
  method="post"
  id="completeTaskForm"
  action=""
>
    <div class="govuk-form-group">
  <fieldset class="govuk-fieldset">
  <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
    Outcome
  </legend>
  <div class="govuk-radios" data-module="govuk-radios">
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="status" name="status" type="radio" value="">
      
    </div>
    <div class="govuk-radios__item">
      <input class="govuk-radios__input" id="status-2" name="status" type="radio" value="">
      
    </div>
  </div>
</fieldset>
</div>


  <button
    type="submit"
    data-prevent-double-click="true"
    data-testid="save-and-continue-button"
    class="govuk-button task-outcome-form__button"
    data-module="govuk-button"
    data-govuk-button-init=""
  >
    Confirm
  </button>
  <a
    href="/cases/case-id"
    class="govuk-link govuk-!-font-size-16"
    data-testid="back-link"
  >
    Cancel and return
  </a>
</form>

  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders completed task without form when user lacks permission 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




      <p class="govuk-inset-text">
        This task was completed by John Doe on
        Mon 15th January 2024 at
        10:30 AM
      </p>

        <p>You cannot edit this task.</p>

        <details class="govuk-details">
  <summary class="govuk-details__summary">
    <span class="govuk-details__summary-text">
      Who can edit the task
    </span>
  </summary>
  <div class="govuk-details__text">
              <p>Someone who is a:</p>
          
            <div class="govuk-!-margin-bottom-3">
              <ul class="govuk-list govuk-list--bullet govuk-!-margin-top-1">
                  <li>admin</li>
              </ul>
            </div>

          

  </div>
</details>

  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders with interactive form 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




        <form
  class="task-outcome-form"
  method="post"
  id="completeTaskForm"
  action=""
>
    <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>


  <button
    type="submit"
    data-prevent-double-click="true"
    data-testid="save-and-continue-button"
    class="govuk-button task-outcome-form__button"
    data-module="govuk-button"
    data-govuk-button-init=""
  >
    Confirm
  </button>
  <a
    href="/cases/case-id"
    class="govuk-link govuk-!-font-size-16"
    data-testid="back-link"
  >
    Cancel and return
  </a>
</form>

  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders with non-interactive form 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
    
  </div>
</div>
"
`;

exports[`task-details > renders with notes history table when task has notesHistory 1`] = `
"<div class="govuk-grid-row">
  <div class="govuk-grid-column-two-thirds">
    
    
    
  <h2 class="govuk-heading-l ">
    Test Task
  </h2>




        <form
  class="task-outcome-form"
  method="post"
  id="completeTaskForm"
  action=""
>
    <div class="govuk-form-group">
  <div class="govuk-checkboxes" data-module="govuk-checkboxes">
    <div class="govuk-checkboxes__item">
      <input class="govuk-checkboxes__input" id="task-completed" name="completed" type="checkbox" value="true">
      <label class="govuk-label govuk-checkboxes__label" for="task-completed">
        Completed
      </label>
    </div>
  </div>
</div>


  <button
    type="submit"
    data-prevent-double-click="true"
    data-testid="save-and-continue-button"
    class="govuk-button task-outcome-form__button"
    data-module="govuk-button"
    data-govuk-button-init=""
  >
    Confirm
  </button>
  <a
    href="/cases/case-id"
    class="govuk-link govuk-!-font-size-16"
    data-testid="back-link"
  >
    Cancel and return
  </a>
</form>

  </div>
</div>

<div class="govuk-grid-row">
  <div class="govuk-grid-column-full">
    
      <div class="notes-history-table govuk-!-margin-top-8">
    <h2 class="govuk-heading-m">Outcome history</h2>


    <table class="govuk-table" data-module="moj-sortable-table">
  <thead class="govuk-table__head">
    <tr class="govuk-table__row">
      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" aria-sort="descending">Date</th>
      <th scope="col" class="govuk-table__header govuk-!-width-one-quarter" aria-sort="ascending">Outcome</th>
      <th scope="col" class="govuk-table__header govuk-!-width-one-half">Note</th>
      <th scope="col" class="govuk-table__header" aria-sort="ascending">Added by</th>
    </tr>
  </thead>
  <tbody class="govuk-table__body">
    <tr class="govuk-table__row">
      <td class="govuk-table__cell" data-sort-value="2025-09-25">25 Sep 2025</td>
      <td class="govuk-table__cell">Accepted</td>
      <td class="govuk-table__cell govuk-!-width-one-half">Approved after review</td>
      <td class="govuk-table__cell">A Jones</td>
    </tr>
    <tr class="govuk-table__row">
      <td class="govuk-table__cell" data-sort-value="2025-09-20">20 Sep 2025</td>
      <td class="govuk-table__cell">Request information from customer</td>
      <td class="govuk-table__cell govuk-!-width-one-half">Waiting for customer to provide updated bank details</td>
      <td class="govuk-table__cell">B Smith</td>
    </tr>
  </tbody>
</table>

  </div>

  </div>
</div>
"
`;
